Trying to fix header text on mobile devices

--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -14,6 +14,7 @@
     transform: translate(-50%, -50%);
     color: white;
     font-size: 40px;
+    text-size-adjust: auto;
   }
 
 .lipadding li {
